@@ -1,9 +1,10 @@
 use strict;
 use warnings FATAL => 'all';
 
-use Test::More tests => 60;
+use Test::More tests => 80;
 use Test::NoWarnings 1.04 ':early';
 use Test::Deep 0.110;
+use Scalar::Util 'refaddr';
 use Storable 'freeze';
 
 # simulates real code that we are testing
@@ -46,6 +47,7 @@ cmp_deeply(
     methods(
         last_http_request_sent => undef,
         last_http_response_received => undef,
+        last_useragent => undef,
     ),
     'initial state (class)',
 );
@@ -59,6 +61,7 @@ cmp_deeply(
         methods(
             last_http_request_sent => undef,
             last_http_response_received => undef,
+            last_useragent => undef,
         ),
         noclass(superhashof({
             __last_http_request_sent => undef,
@@ -121,6 +124,7 @@ cmp_deeply(
             methods(
                 last_http_request_sent => undef,
                 last_http_response_received => undef,
+                last_useragent => isa('LWP::UserAgent'),
             ),
             noclass(superhashof({
                 __last_http_request_sent => undef,
@@ -181,6 +185,18 @@ sub test_send_request
             ),
         ),
         "$name request",
+    );
+
+    is(
+        refaddr($MyApp::useragent->last_useragent),
+        refaddr($MyApp::useragent),
+        'last_useragent (class method)',
+    );
+
+    cmp_deeply(
+        refaddr(Test::LWP::UserAgent->last_useragent),
+        refaddr($MyApp::useragent),
+        'last_useragent (instance method)',
     );
 
     cmp_deeply(
